fixed on iPhone 8

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ hr {
   background: white;
   font-size: 15px;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
   border: none;
   padding: 0 20px;
 }
